--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --darkColour: #172E60;
     --ultraDarkColour: #0b214f;
     --ultraDarkColour: #021846;
+    // --ultraDarkColour: #172E60;
     --lightColour: #f8f8f8;
     --textBorderColour: #000000;
     //--lightColour: #f5f5f7;
@@ -542,7 +543,7 @@ button {
     gap: .8rem;
 
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .subTitle {
@@ -724,27 +725,16 @@ button {
     margin: 3.5px auto;
 }
 
-#greetings {
-    padding: 1.8rem;
-}
-
 .praxis {
     display: flex;
     flex-direction: column;
 
     padding: 20px;
-
-    display: none;
 }
 
 .moveTop img {
-    border: solid 1px red;
     width: 100%;
-    height: 150px;
     object-fit: cover;
-
-    border-radius: 10px;
-    border: solid 2px var(--ultraDarkColour);
 }
 
 .icono {
@@ -968,7 +958,6 @@ button {
     width: 100%;
     margin: 0 auto;
     position: relative;
-    background-color: var(--lightColour);
     padding: 20px 15px 40px 15px;
 
     border-radius: 15px;
