--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ html {
 
 section {
     padding: 20px;
+    margin-bottom: 20px;
 }
 
 /****** TYPOGRAPHY *********/
@@ -484,7 +485,7 @@ button {
 
 #header-left img {
     width: 100%;
-    aspect-ratio: 3 / 2.5;
+    aspect-ratio: 1;
     object-fit: cover;
     //object-position: 0 0;
     display: block;
@@ -730,15 +731,34 @@ button {
     flex-direction: column;
 
     padding: 20px;
+
+    background-color: var(--lightColour);
 }
 
 .praxis img {
-    //aspect-ratio: 1/.8;
-}
-
-.moveTop img {
     width: 100%;
     object-fit: cover;
+    border-radius: 10px;
+    border: solid 2px var(--ultraDarkColour);
+    aspect-ratio: 1;
+}
+
+.praxisGridWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.praxis .right-container {
+    margin-top: 20px;
+}
+
+.praxis2 {
+    display: none;
+}
+
+.praxis2Inner p {
+    width: 90%;
 }
 
 .icono {
@@ -1315,7 +1335,6 @@ button {
 
 .footerAbsoluteBG {
     position: absolute;
-    width: 100%;
     height: 100%;
     z-index: -1;
     background-size: cover;
@@ -1498,7 +1517,7 @@ button {
 
 
 #rezensionen {
-    padding: 10rem 0rem 10rem 0rem;
+    padding: 5rem 0rem 10rem 0rem;
     overflow: hidden;
 }
 
