--- a/desktop.css
+++ b/desktop.css
@@ -49,8 +49,8 @@
     .navigationBar_inner {
 
         max-width: var(--maxWidth);
-        min-width: 900px;
-        width: 90%;
+        min-width: var(--minWidth);
+        width: var(--contentWidth);
         margin: 15px auto;
 
         display: flex;
@@ -140,8 +140,6 @@
     .newLeistungen {
         flex-direction: row;
         gap: 6rem;
-        padding: 4rem 0rem;
-        margin: 8rem auto 8rem auto;
 
         max-width: var(--maxWidth);
         width: 80%;
@@ -171,29 +169,22 @@
     .cardUp {
         //position: absolute;
         //top: -80px;
-        opacity: 0;
         transform: translate(0, 100px);
-        transition: 1s;
+        transition: ease-out 1s;
+        opacity: 0;
+    }
+
+    .cardDown {
+        transform: translate(0, -100px);
+        transition: ease-out 1s;
+        opacity: 0;
     }
 
     .cardUp_show {
         opacity: 1;
-        transform: translate(0, -40px);
+        transform: translate(0, 0px);
     }
 
-    .cardDown {
-        //position: absolute;
-        //bottom: -80px;
-
-        opacity: 0;
-        transform: translate(0, 180px);
-        transition: 1s;
-    }
-
-    .cardDown_show {
-        opacity: 1;
-        transform: translate(0, 40px);
-    }
 
     .newLeistungen-cardText {
         transform: translateY(230px);
