--- a/tablet.css
+++ b/tablet.css
@@ -23,6 +23,7 @@
         font-size: 3.2rem;
         font-weight: 500;
         text-align: center;
+        line-height: 3.5rem;
     }
 
     p {
@@ -31,12 +32,16 @@
     }
 
     section {
-        width: 100%;
-        padding: 0;
+        padding: 8rem 0;
+        margin: 0;
+        min-height: 80vh;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 
-    button {
-        margin: 1.4rem 0 0 0;
+    #regional .innerSection {
+        flex-direction: row;
     }
 
     .moreButton {
@@ -194,7 +199,7 @@
     #greetings {
         //width: 70%;
         //max-width: 1500px;
-        margin: 10rem auto;
+        margin: 0 auto;
         background-color: var(--lightColour: #f8f8f8);
         display: flex;
         max-width: var(--maxWidth);
@@ -346,6 +351,10 @@
         margin: 0;
     }
 
+    .carousel-wrapper {
+        display: none;
+    }
+
     .praxisGridWrapper {
         display: grid;
         grid-template-columns: 2fr 1.5fr;
@@ -392,7 +401,7 @@
     }
 
     #physioHelpsWrapper {
-        display: flex;
+        //display: flex;
         justify-content: center;
         align-items: center;
     }
@@ -448,10 +457,6 @@
     .newLeistungenLeftInner {
         display: flex;
         flex-direction: column;
-
-        position: sticky;
-        top: 8rem;
-        top: 25vh;
     }
 
     .newLeistungen p {
@@ -469,9 +474,42 @@
         display: grid;
         gap: 20px;
         grid-template-columns: auto;
-        width: 635px;
-        height: 635px;
     }
+
+
+
+    .innerSection {
+        margin: 0 auto;
+        max-width: var(--maxWidth);
+        min-width: 900px;
+        width: var(--contentWidth);
+        display: flex;
+        flex-direction: row;
+    }
+
+    .box {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1.5rem;
+    }
+
+    .cardBox {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        width: 70%;
+    }
+
+    .box p,
+    .box h5 {
+        text-align: left;
+    }
+
+
+
+
 
     .newAbsolute {
         position: absolute;
@@ -516,7 +554,6 @@
 
     #rezensionen {
         min-height: 10px;
-        padding: 4rem 0rem 10rem 0rem;
         display: flex;
         gap: 5rem;
 
