--- a/tablet.css
+++ b/tablet.css
@@ -32,7 +32,7 @@
     }
 
     section {
-        padding: 8rem 0;
+        padding: 6rem 0;
         margin: 0;
         min-height: 80vh;
         display: flex;
@@ -42,6 +42,13 @@
 
     #regional .innerSection {
         flex-direction: row;
+    }
+
+    #regional img {
+        //position: absolute;
+        height: fit-content;
+        width: 220px;
+        max-width: none;
     }
 
     .moreButton {
@@ -123,6 +130,10 @@
         position: relative;
         align-items: center;
         background-size: cover;
+    }
+
+    #header button {
+        margin: 2rem auto 0 0;
     }
 
 
@@ -485,6 +496,7 @@
         width: var(--contentWidth);
         display: flex;
         flex-direction: row;
+        gap: 8rem;
     }
 
     .box {
