--- a/testSectionCss.css
+++ b/testSectionCss.css
@@ -147,3 +147,58 @@
         flex: 1 1 33%;
     }
 }
+
+
+
+
+
+
+
+#scrollToTop {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 50%;
+    background-color: #333;
+    color: white;
+    cursor: pointer;
+    outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
+    z-index: 100;
+
+}
+
+#scrollToTop.show {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+}
+
+#scrollToTop .arrow {
+    position: absolute;
+    font-size: 1.2rem;
+    pointer-events: none;
+}
+
+.progress-ring {
+    transform: rotate(-90deg);
+    position: absolute;
+}
+
+.progress-ring__circle {
+    stroke-dasharray: 138;
+    /* 2πr = 2 * π * 22 */
+    stroke-dashoffset: 138;
+    transition: stroke-dashoffset 0.25s linear;
+    color: #00aaff;
+    color: var(--mainColour);
+}
