--- a/style.css
+++ b/style.css
@@ -1439,6 +1439,8 @@ button {
     flex-direction: column;
     align-items: center;
     cursor: pointer;
+
+    display: none;
 }
 
 .backToTopScrolled {
