--- a/style.css
+++ b/style.css
@@ -1155,18 +1155,15 @@ button {
     flex-direction: column-reverse;
 }
 
-#regional img {
-    //position: absolute;
-    margin: 0 10px;
-    //height: fit-content;
-    width: 60%;
-
-}
-
 #regional .box:first-of-type {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.firstImg,
+.secondImg {
+    width: 50%;
 }
 
 .iconi {
