--- a/animations.css
+++ b/animations.css
@@ -47,13 +47,18 @@
     transform: translateY(0px);
 }
 
+.goActive {
+    opacity: 0;
+}
 
 .wentActive {
-    height: 160px;
-    width: 160px;
+    //height: 160px;
+    //width: 160px;
 
     transition: ease-out .6s;
     transition-delay: 0.1s;
+    transform: translateY(0);
+    transform: translateX(0);
     opacity: 1;
 }
 
