--- a/tablet.css
+++ b/tablet.css
@@ -8,15 +8,17 @@
         line-height: 4rem;
     }
 
-    h2 {
-        text-align: center;
-    }
-
     h4 {
-        color: var(--mainColour);
-        font-size: 1.1rem;
+        color: var(--lightColour);
+        font-size: 1.7rem;
+        line-height: 2.4rem;
         font-family: var(--mainFont);
+        font-style: italic;
         font-weight: 400;
+        margin: 0 auto;
+        text-align: left;
+
+        transform: translateY(100px);
     }
 
     h5 {
@@ -28,16 +30,83 @@
 
     p {
         text-align: center;
-        margin: 0 auto;
     }
 
     section {
         padding: 6rem 0;
         margin: 0;
-        min-height: 80vh;
+        min-height: 70vh;
         display: flex;
         justify-content: center;
         flex-direction: column;
+    }
+
+    .sectionInner {
+        margin: 0px auto;
+        width: 100%;
+        max-width: 1000px;
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+    .gradient {
+        height: 460px;
+    }
+
+    .quoteBox {}
+
+    .quoteSign {
+        font-size: 12rem;
+        top: 50px;
+        left: -25px;
+    }
+
+    .showcaseImgBox {
+        background-color: var(--lightColour);
+        border-radius: 15px;
+        padding: 12px;
+        width: fit-content;
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: stretch;
+        gap: 5px;
+
+        width: 100%;
+        //max-height: 400px;
+    }
+
+
+    .showcaseImgBox img {
+        object-fit: cover;
+        width: 100%;
+    }
+
+    .sectionInner p {
+        text-align: left;
+    }
+
+    .innerSection-flex {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 2rem;
+    }
+
+    .small {
+        width: 30%;
+    }
+
+    .innerSection-box {
+        max-width: 500px;
+        margin: auto 0;
+    }
+
+    .space-between {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 3rem;
     }
 
     #regional .innerSection {
@@ -47,7 +116,18 @@
     #regional img {
         //position: absolute;
         height: fit-content;
-        width: 220px;
+        //width: 190px;
+        max-width: none;
+    }
+
+    .firstImg {
+        width: 210px;
+    }
+
+    .secondImg {
+        //position: absolute;
+        height: fit-content;
+        width: 270px;
         max-width: none;
     }
 
@@ -511,6 +591,11 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
+        width: 50%;
+        gap: 3rem;
+    }
+
+    .exception {
         width: 70%;
     }
 
@@ -568,7 +653,7 @@
         min-height: 10px;
         display: flex;
         gap: 5rem;
-
+        margin: 4rem 0;
     }
 
     .rezension {
@@ -577,7 +662,7 @@
         flex-shrink: 0;
         /* prevents shrinking */
         width: 550px;
-        padding: 25px 30px;
+        padding: 15px 30px;
         float: left;
         border-radius: 20px;
 
