--- a/desktop.css
+++ b/desktop.css
@@ -51,7 +51,7 @@
         max-width: var(--maxWidth);
         min-width: var(--minWidth);
         width: var(--contentWidth);
-        margin: 15px auto;
+        margin: 5px auto;
 
         display: flex;
         justify-content: space-between;
@@ -109,7 +109,7 @@
     #header-emptyTop {
         width: 100%;
         height: 110px;
-        height: 101px;
+        height: 82px;
         display: block;
     }
 
@@ -182,13 +182,13 @@
 
     .cardLeft {
         opacity: 0;
-        transform: translate(-100px, 0);
+        transform: translate(100px, -200px);
         transition: 1s;
     }
 
     .cardRight {
         opacity: 0;
-        transform: translate(100px, 0);
+        transform: translate(-100px, 200px);
         transition: 1s;
     }
 
