--- a/testSectionCss.css
+++ b/testSectionCss.css
@@ -241,19 +241,19 @@
 .newBox {
     position: relative;
 
-    width: 800px;
+    width: 700px;
     height: 450px;
 }
 
 .newBox_first {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0rem;
+    left: 0rem;
 
     background-color: var(--ultraDarkColour);
+    background-color: rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 100%;
-
     clip-path: polygon(0 0, 82.5% 0, 50% 84%, 0 84%);
 }
 
@@ -270,6 +270,7 @@
     right: 0;
 
     background-color: var(--ultraDarkColour);
+    background-color: rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 100%;
 
