--- a/style.css
+++ b/style.css
@@ -83,8 +83,9 @@ section {
     overflow: scroll;
 
     background-color: rgba(0, 0, 0, 0.05);
+    background-color: red;
 
-    margin: 2rem -2rem;
+    margin: 2rem -1.8rem;
 
     padding: 2rem;
 
