--- a/tablet.css
+++ b/tablet.css
@@ -43,8 +43,9 @@
 
     .sectionInner {
         margin: 0px auto;
-        width: 100%;
-        max-width: 1000px;
+        width: var(--contentWidth);
+        min-width: var(--minWidth);
+        max-width: var(--maxWidth);
         display: flex;
         flex-direction: column;
         gap: 3rem;
@@ -70,10 +71,11 @@
         display: flex;
         flex-wrap: nowrap;
         align-items: stretch;
-        gap: 5px;
+        gap: 1.5rem;
 
         width: 100%;
         //max-height: 400px;
+        margin: 0;
     }
 
 
@@ -81,6 +83,16 @@
         object-fit: cover;
         width: 100%;
     }
+
+    .newBox {
+        position: relative;
+
+        width: 650px;
+        height: 450px;
+
+        //max-width: 600px;
+    }
+
 
     .sectionInner p {
         text-align: left;
@@ -581,7 +593,7 @@
         width: var(--contentWidth);
         display: flex;
         flex-direction: row;
-        gap: 5rem;
+        gap: 7rem;
     }
 
     .box {
