--- a/tablet.css
+++ b/tablet.css
@@ -72,6 +72,7 @@
         flex-wrap: nowrap;
         align-items: stretch;
         gap: 1.5rem;
+        overflow: hidden;
 
         width: 100%;
         //max-height: 400px;
@@ -81,7 +82,9 @@
 
     .showcaseImgBox img {
         object-fit: cover;
-        width: 100%;
+        width: 50%;
+
+        aspect-ratio: auto;
     }
 
     .newBox {
@@ -609,11 +612,12 @@
         align-items: center;
         justify-content: space-around;
         width: 50%;
-        gap: 3rem;
+        gap: 0;
     }
 
     .exception {
         width: 70%;
+        gap: 3rem;
     }
 
     .box p,
