--- a/tablet.css
+++ b/tablet.css
@@ -72,17 +72,17 @@
         flex-wrap: nowrap;
         align-items: stretch;
         gap: 1.5rem;
-        overflow: hidden;
+        overflow: visible;
 
         width: 100%;
-        //max-height: 400px;
+        max-height: 500px;
         margin: 0;
     }
 
 
     .showcaseImgBox img {
         object-fit: cover;
-        width: 50%;
+        width: 100%;
 
         aspect-ratio: auto;
     }
@@ -106,6 +106,7 @@
         flex-direction: row;
         flex-wrap: nowrap;
         gap: 2rem;
+        align-items: center;
     }
 
     .small {
