--- a/desktop.css
+++ b/desktop.css
@@ -51,12 +51,12 @@
         max-width: var(--maxWidth);
         min-width: var(--minWidth);
         width: var(--contentWidth);
-        margin: 5px auto;
+        margin: auto;
 
         display: flex;
         justify-content: space-between;
         transition: .2s;
-        height: 70px;
+        height: 90px;
         padding: 0;
     }
 
@@ -109,7 +109,7 @@
     #header-emptyTop {
         width: 100%;
         height: 110px;
-        height: 82px;
+        height: 70px;
         display: block;
     }
 
@@ -248,6 +248,7 @@
         align-items: center;
         justify-content: space-between;
         width: 45%;
+        height: 100%;
     }
 
     #navigationBar_menuItem {
@@ -255,18 +256,21 @@
         font-weight: 420;
         font-size: 1rem;
         height: 100%;
-        padding: 10px 10px;
+        //padding: 10px 10px;
         display: flex;
         -ms-align-items: center;
         align-items: center;
-        border-radius: 5px;
-
         color: grey;
+        border-top: solid 4px transparent;
+        border-bottom: solid 4px transparent;
     }
 
     #navigationBar_menuItem:hover {
-        background-color: var(--ultraDarkColour);
-        color: white;
+        //background-color: var(--ultraDarkColour);
+        color: #454545;
+
+
+        border-bottom: solid 4px var(--darkColour);
     }
 
     #navigationBar_menuItem a {
