--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ section {
     min-height: 0px;
 
     height: 40vh;
-    min-height: 330px;
+    min-height: 360px;
     max-height: 1000px;
 
     //clip-path: polygon(0 0, 100% 0, 100% 88%, 24% 100%, 0 93%);
@@ -782,6 +782,7 @@ button {
 
     background-color: var(--lightColour);
     background-color: #F7F7F7;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.05);
 }
 
 .navigationBar_inner {
