--- a/testSectionCss.css
+++ b/testSectionCss.css
@@ -314,3 +314,68 @@
 .newBox_second img {
     display: block;
 }
+
+
+
+
+
+
+
+/**************** HORIZONTAL SLIDER ***************/
+
+
+.slider-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.slider {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+}
+
+.slider img {
+    width: 100%;
+    height: auto;
+    flex-shrink: 0;
+    scroll-snap-align: center;
+    border-radius: 10px;
+    aspect-ratio: 1.2/1;
+    object-fit: cover;
+}
+
+.slider::-webkit-scrollbar {
+    display: none;
+    /* hide scrollbar on mobile */
+}
+
+
+.slider {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.dots {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-top: 30px;
+}
+
+.dots .dot {
+    width: 10px;
+    height: 10px;
+    background: #ddd;
+    border-radius: 50%;
+    transition: 0.3s;
+}
+
+.dots .dot.active {
+    background: #151552;
+}
