--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html {
 }
 
 section {
-    padding: 2.5rem 1.8rem;
+    padding: 1rem 1.8rem;
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -92,7 +92,7 @@ section {
     overflow: scroll;
 
     background-color: rgba(0, 0, 0, 0.04);
-    margin: 2rem -1.8rem;
+    margin: 0 -1.8rem;
 
     padding: 2rem;
 
